--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,15 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    adminer:
+        image: adminer
+        restart: always
+        ports:
+            - '${ADMINER_PORT:-8080}:8080'
+        networks:
+            - sail
+        depends_on:
+            - mysql
 networks:
     sail:
         driver: bridge
