--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,66 +1,54 @@
 ################################################################################
-# 1)   BUILD-СТАДИЯ: собираем вендоры Composer с нужными PHP-расширениями
+# 1) BUILD-СТАДІЯ ─ Composer + ext-intl (Alpine)
 ################################################################################
 FROM composer:2.7 AS vendor
 
-# ─ Install intl, которого нет в образе composer по умолчанию
-RUN apt-get update \
- && apt-get install -y --no-install-recommends libicu-dev git \
- && docker-php-ext-install intl \
- && rm -rf /var/lib/apt/lists/*
+# ─ intl та git в Alpine
+RUN apk add --no-cache icu-dev git \
+ && docker-php-ext-install intl
 
 WORKDIR /app
-
-# ─ Только composer.* → меньше кэша при rebuild
 COPY composer.json composer.lock ./
-
-# ─ Ставим прод-зависимости без dev-пакетов и без запуска post-скриптов
-RUN composer install \
-      --no-dev --prefer-dist \
-      --no-interaction --no-scripts
+RUN composer install --no-dev --prefer-dist --no-interaction --no-scripts
 
 ################################################################################
-# 2)   RUNTIME-СТАДИЯ: PHP-FPM + Nginx + Supervisor + ваше приложение
+# 2) RUNTIME ─ PHP-FPM 8.3 + Nginx + Supervisor
 ################################################################################
 FROM php:8.3-fpm-alpine
 
-# ─ Базовые пакеты + nginx & supervisor
+# ─ системні пакети
 RUN apk add --no-cache \
         nginx supervisor bash curl \
         icu libpng libjpeg-turbo freetype libzip oniguruma
 
-# ─ Build-зависимости для сборки ext-ов
+# ─ build-deps для PHP-ext
 RUN apk add --no-cache --virtual .build-deps \
         icu-dev libpng-dev jpeg-dev freetype-dev libzip-dev oniguruma-dev \
         g++ make autoconf
 
-# ─ PHP-расширения, которые чаще всего нужны Laravel
+# ─ потрібні розширення PHP
 RUN docker-php-ext-install \
         intl pdo pdo_mysql bcmath gd zip opcache \
- && apk del .build-deps                                   # чистим мусор
+ && apk del .build-deps
 
-# ─ Ставим Composer внутрь рантайм-образа (иногда нужен для artisan)
+# ─ Composer усередині рантайм-образу (іноді потрібен для artisan)
 RUN curl -sS https://getcomposer.org/installer \
     | php -- --install-dir=/usr/local/bin --filename=composer
 
 ################################################################################
-# 3)   КОД ПРИЛОЖЕНИЯ + ОПТИМИЗАЦИЯ
+# 3) КОД + ОПТИМІЗАЦІЯ LARAVEL
 ################################################################################
 WORKDIR /var/www/html
-
-# ─ Vendor-папка приходит из build-стадии → экономим время на install
 COPY --from=vendor /app/vendor ./vendor
-# ─ Остальной проект
 COPY . .
 
-# ─ Laravel оптимизация (можно убрать, если нужно только в CI)
 RUN php artisan storage:link           \
  && php artisan config:cache           \
  && php artisan route:cache            \
  && php artisan view:cache
 
 ################################################################################
-# 4)   КОНФИГИ NGINX / SUPERVISOR И СТАРТ
+# 4) Nginx / Supervisor / старт
 ################################################################################
 COPY deploy/nginx.conf       /etc/nginx/nginx.conf
 COPY deploy/supervisord.conf /etc/supervisord.conf
